--- a/Trabalho02.ipynb
+++ b/Trabalho02.ipynb
@@ -1469,7 +1469,7 @@
    "id": "8989d714-43af-44b5-9bf8-cd337a8c700f",
    "metadata": {},
    "source": [
-    "----------------Nesta secessão é calculado o perfil e gradiente de temperatura para o VERÃO nos dias 01 a 05 de jan 2023----------------------------------"
+    "## Nesta secessão é calculado o perfil e gradiente de temperatura para o VERÃO nos dias 01 a 05 de jan 2023 -----------------------------------------------------------------------------------------------"
    ]
   },
   {
@@ -1683,6 +1683,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "591e808f-0728-45a6-8429-f394017b747a",
+   "metadata": {},
+   "source": [
+    "## Nesta secessão é calculado o perfil e gradiente de temperatura para o INVERNO nos dias 20 a 24 de jun 2023 -----------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "id": "3904182c-98c7-4b8a-a376-bd0d780abf03",
@@ -1890,14 +1898,6 @@
     "for i in range(5):\n",
     "    date = start_date + timedelta(days=i)\n",
     "    plot_temperature_profile_and_gradient(date, station)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a460da18-9531-401f-9c2b-035ca9cace05",
-   "metadata": {},
-   "source": [
-    "----------------Nesta secessão é calculado o perfil e gradiente de temperatura para o INVERNO nos dias 20 a 24 de jun 2023----------------------------------"
    ]
   },
   {
