--- a/Trabalho02.ipynb
+++ b/Trabalho02.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Caracterização meteorologica da área de estudos - Porto Bello\n",
-    "Alunas: Marília Meister e Maria Nathalia\n",
+    "Alunas: Marília Meister (20250396) e Maria Natalia da Silva (17207797)\n",
     "\n",
     "Nesta atividade caracterizaremos a meteorologia da área de estudo. Avaliando os seguintes pontos:\n",
     "\n",
